Sostituiti gli h1 con effettivi menu a tendina

--- a/index.html
+++ b/index.html
@@ -36,21 +36,31 @@
         <!--secondo contenitore con il resto-->
         <div>
 
-                <h1 >&blacktriangledown; New Task</h1>
-                <p><span class="amark">&#9745;</span>Quarterly Newsletter <span class="spblock bgblue">Editorial</span></p>
+            <details>
+                <!-- <h1 >&blacktriangledown; New Task</h1> -->
+                <summary>New Task</summary>
+                    <p><span class="amark">&#9745;</span>Quarterly Newsletter <span class="spblock bgblue">Editorial</span></p>
+            
+            </details>
 
-                <h1>&blacktriangledown; Today</h1>
-                <p><span class="amark">&#9745;</span> Recruiting blog post<span class="spblock bgblue">Editorial</span></p>
-                <p><span class="amark">&#9745;</span> Mobile app launch<span class="spblock bgpurple">Q1 Goals</span></p>
-                <p><span class="dmark">&otimes;</span> Interview John H.<span class="spblock bggreen">Recruiting</span></p>
-                <p><span class="amark">&#9745;</span> Summit update to mobile storefronts<span class="spblock bgyellow">Mobile</span></p>
+                <!--<h1>&blacktriangledown; Today</h1> -->
+                <details>
+                    <summary>Today</summary>
+                        <p><span class="amark">&#9745;</span> Recruiting blog post<span class="spblock bgblue">Editorial</span></p>
+                        <p><span class="amark">&#9745;</span> Mobile app launch<span class="spblock bgpurple">Q1 Goals</span></p>
+                        <p><span class="dmark">&otimes;</span> Interview John H.<span class="spblock bggreen">Recruiting</span></p>
+                        <p><span class="amark">&#9745;</span> Summit update to mobile storefronts<span class="spblock bgyellow">Mobile</span></p>
+                </details>
 
-                <h1>&blacktriangledown; Upcoming</h1>
-                <p><span class="dmark">&otimes;</span> Schedule Meeting with Alex</p>
-                <p><span class="amark">&#9745;</span> Homepage Refresh<span class="spblock bgpink">Website</span></p>
-                <p><span class="amark">&#9745;</span> Onboard new Sale team members<span class="spblock bglightgreen">Sales</span></p>
-                <p><span class="amark">&#9745;</span> Review editorial calendar<span class="spblock bgblue">Editorial</span></p>
 
+                <!--<h1>&blacktriangledown; Upcoming</h1> -->
+                <details>
+                    <summary>Upcoming</summary>
+                        <p><span class="dmark">&otimes;</span> Schedule Meeting with Alex</p>
+                        <p><span class="amark">&#9745;</span> Homepage Refresh<span class="spblock bgpink">Website</span></p>
+                        <p><span class="amark">&#9745;</span> Onboard new Sale team members<span class="spblock bglightgreen">Sales</span></p>
+                        <p><span class="amark">&#9745;</span> Review editorial calendar<span class="spblock bgblue">Editorial</span></p>
+                </details>
         </div>
 
     </main>
